--- a/myApi/package.json
+++ b/myApi/package.json
@@ -4,6 +4,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint ,",
+    "lint:fix": "eslint .--fix",
     "build": "rimraf dist && npx tsc",
     "dev": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules src/shared/http/server.ts"
   },
