--- a/myApi/package.json
+++ b/myApi/package.json
@@ -14,12 +14,16 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.0",
     "@types/node": "^22.13.5",
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.7.3"
   },
   "dependencies": {
+    "cors": "^2.8.5",
+    "express-async-errors": "^3.1.1",
     "rimraf": "^6.0.1"
   }
 }
