--- a/myApi/package.json
+++ b/myApi/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "express-async-errors": "^3.1.1",
     "rimraf": "^6.0.1"
   }
