--- a/myApi/package.json
+++ b/myApi/package.json
@@ -17,6 +17,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/node": "^22.13.5",
+    "@types/swagger-ui-express": "^4.1.8",
     "@types/uuid": "^10.0.0",
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.2.0",
@@ -27,6 +28,7 @@
     "dotenv": "^16.4.7",
     "express-async-errors": "^3.1.1",
     "rimraf": "^6.0.1",
+    "swagger-ui-express": "^5.0.1",
     "uuid": "^11.1.0"
   }
 }
