--- a/myApi/package.json
+++ b/myApi/package.json
@@ -28,7 +28,7 @@
     "dotenv": "^16.4.7",
     "express-async-errors": "^3.1.1",
     "rimraf": "^6.0.1",
-    "swagger-ui-express": "^5.0.1",
-    "uuid": "^11.1.0"
+    "@types/swagger-ui-express": "^4.1.8",
+    "@types/uuid": "^10.0.0",
   }
 }
