--- a/myApi/package.json
+++ b/myApi/package.json
@@ -24,11 +24,15 @@
     "typescript": "^5.7.3"
   },
   "dependencies": {
+    "3": "^2.1.0",
+    "@types/swagger-ui-express": "^4.1.8",
+    "@types/uuid": "^10.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express-async-errors": "^3.1.1",
+    "reflect-metadata": "^0.2.2",
     "rimraf": "^6.0.1",
-    "@types/swagger-ui-express": "^4.1.8",
-    "@types/uuid": "^10.0.0",
+    "sqlite": "^5.1.1",
+    "typeorm": "^0.3.21"
   }
 }
