--- a/myApi/package.json
+++ b/myApi/package.json
@@ -33,6 +33,8 @@
     "reflect-metadata": "^0.2.2",
     "rimraf": "^6.0.1",
     "sqlite": "^5.1.1",
+    "sqlite3": "^5.1.7",
+    "swagger-ui-express": "^5.0.1",
     "typeorm": "^0.3.21"
   }
 }
